# e2simulator

./: .gitlab-ci-local.yml  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfiles  README.md  build_and_run.sh  main.c  synthetic_metric_data.csv
Ressource_allocation/: Dockerfile-send  Dockerfile-train_model  requirements.txt  requirements_train.txt  send_cell_configuration.py
Ressource_allocation/src/: Explor_corr.py  ad_model.py  detailed_predictions.xlsx  generate_data.py  mlflow.db  model_evaluation.xlsx  train_model.py
Ressource_allocation/tests/: test_ad.py
ad/: dockerfile  generate_data.py  requirements.txt  requirements_train.txt
asn1_files/: CellConfiguration-ASN1  CellConfiguration-ASN1.asn  e2sm.asn  e2sm_firmin.asn  e2sm_kpm.asn  e2sm_kpm_firmin.asn  e2sm_kpm_firmin.asnY  e2sm_rc.asn  e2sm_rc_firmin.asn  main.c
asn1_files/asn1_files/: e2sm_kpm_firmin.asn
asn1c/: AMF-UE-NGAP-ID.c  AMF-UE-NGAP-ID.h  AMFName.c  AMFName.h  AMFPointer.c  AMFPointer.h  AMFRegionID.c  AMFRegionID.h  AMFSetID.c  AMFSetID.h  ANY.c  ANY.h  ANY_aper.c  ANY_ber.c  ANY_jer.c  ANY_uper.c  ANY_xer.c  CMakeLists.txt  aper_decoder.c  aper_decoder.h  aper_encoder.c  aper_encoder.h  aper_opentype.c  aper_opentype.h  aper_support.c  aper_support.h  asn_SEQUENCE_OF.c  asn_SEQUENCE_OF.h  asn_SET_OF.c  asn_SET_OF.h  asn_application.c  asn_application.h  asn_bit_data.c  asn_bit_data.h  asn_codecs.h  asn_codecs_prim.c  asn_codecs_prim.h  asn_codecs_prim_ber.c  asn_codecs_prim_xer.c  asn_config.h  (+10 more)
asn1c/asn/v03/: e2ap-common-v03.01.asn  e2ap-constant-v03.01.asn  e2ap-container-v03.01.asn  e2ap-epd-v03.01.asn  e2ap-ied-v03.01.asn  e2ap-pdu-v03.01.asn  e2sm-kpm-v03.00.asn  e2sm-v03.01.asn
asn1c/asn1_files/: CellConfiguration.asn1
asn1c_generated/: CellConfiguration.c  CellConfiguration.h  EXTERNAL.c  EXTERNAL.h  Makefile.am.asn1convert  Makefile.am.libasncodec  converter-example.mk  pdu_collection.c
data/: generate_data.py
docs/: Function-Explain.md  Manual-Build.md
e2sim/:  requirements  .dockerignore  Dockerfile  Dockerfile.ge  Dockerfile_kpm  README.md  e2sim.code-workspace  generate_data
e2sim/e2sm_examples/kpm_e2sm/: reports.json  reports_file_full.json
e2sim/e2sm_examples/kpm_e2sm/src/kpm/: config.json  encode_kpm.cpp  encode_kpm.hpp  kpm_callbacks.cpp
e2sim/kpm_e2sm/: cellmeasreport.json
e2sim/kpm_e2sm/src/kpm/: config.json  encode_kpm.cpp  encode_kpm.hpp  kpm_callbacks.hpp
e2sim/src/base/: e2sim.cpp
e2sim/src/encoding/: encode_e2apv1.cpp
e2sim/src/messagerouting/: e2ap_message_handler.cpp
helm/: e2sim.template  e2sim.yaml  manifest.template.yaml
kpm_e2sm/: CMakeLists.txt  cellmeasreport.json  reports_file_full.json  uemeasreport.json
kpm_e2sm/src/kpm/: CMakeLists.txt  build_e2ap_indication.cpp  build_e2ap_indication.hpp  config.json  data.csv  encode_kpm.cpp  encode_kpm.hpp  encode_kpm_indication.cpp  encode_kpm_indication.hpp  kpi_traces.json  kpm_callbacks.cpp  kpm_callbacks.hpp
rc_e2sm/: CMakeLists.txt  rc_handler.cpp  rc_handler.hpp  rc_subscription_handler.h
rc_e2sm/src/rc/: CMakeLists.txt  encode_rc.cpp  encode_rc.hpp  main.cpp  rc_callbacks.cpp  rc_callbacks.hpp  rc_handler.cpp  rc_subscription_handler.cpp  rc_subscription_handler.hpp  subscription_callbacks.hpp
src/: main.cpp
src/DEF/: e2sim_defs.h
src/SCTP/: CMakeLists.txt  e2sim_sctp.c  e2sim_sctp.cpp
src/base/: CMakeLists.txt  e2sim.cpp
src/encoding/: build_e2ap_indication.cpp  encode_e2apv1.cpp
src/messagerouting/: CMakeLists.txt  e2ap_message_handler.cpp
src/rc_e2sm/: rc_callbacks.cpp  rc_callbacks.hpp
